chore: add dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vitepress": "1.0.0-rc.12"
+    "@types/node": "^20.6.0",
+    "gray-matter": "^4.0.3",
+    "less": "^4.2.0",
+    "vitepress": "1.0.0-rc.13",
+    "vue": "^3.3.4"
   }
 }
