--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "fast-glob": "^3.3.1",
     "gray-matter": "^4.0.3",
     "less": "^4.2.0",
     "vitepress": "1.0.0-rc.20",
