--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/remove-markdown": "^0.3.1",
     "fast-glob": "^3.3.1",
     "gray-matter": "^4.0.3",
     "less": "^4.2.0",
+    "remove-markdown": "^0.5.0",
     "vitepress": "1.0.0-rc.20",
     "vue": "^3.3.4"
   }
