--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ "master" ]
   workflow_dispatch:
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,3 +24,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           folder: .vitepress/dist
+          branch: gh-pages
