chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 node_modules
-.DS_Store
-dist
-dist-ssr
-cache
-.cache
-.temp
-*.local
-dev-dist
+.vitepress/dist
+.vitepress/cache
+/*.md
+!README.md
