--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-glob": "^3.3.1",
     "gray-matter": "^4.0.3",
     "less": "^4.2.0",
+    "medium-zoom": "^1.0.8",
     "remove-markdown": "^0.5.0",
     "vitepress": "1.0.0-rc.20",
     "vue": "^3.3.4"
