--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^20.6.0",
     "@types/remove-markdown": "^0.3.1",
+    "@waline/client": "^3.1.3",
     "fast-glob": "^3.3.1",
     "gray-matter": "^4.0.3",
     "less": "^4.2.0",
