--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "less": "^4.2.0",
     "medium-zoom": "^1.0.8",
     "remove-markdown": "^0.5.0",
-    "vitepress": "1.4.1",
+    "vitepress": "2.0.0-alpha.4",
     "vue": "^3.3.4"
   }
 }
