--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@bprogress/core": "^1.3.4",
     "@fancyapps/ui": "^6.1.7",
+    "@fontsource/geist-mono": "^5.2.7",
+    "@fontsource/geist-sans": "^5.2.5",
     "@iconify/vue": "^5.0.0",
     "@types/node": "^20.6.0",
     "@types/remove-markdown": "^0.3.1",
